split data by lazy

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -17,6 +17,6 @@
         </div>
       </div>
     </div>
-    <div class="footer__copy">{{'© 2018 EXRATES LTD trade marks belong to their corresponding owners. All rights are reserved' | translate}}</div>
+    <div class="footer__copy">{{'© 2018 EXRATES LTD trade marks belong to their corresponding owners' | translate}}.{{' All rights are reserved' | translate}}</div>
   </div>
 </footer>
