--- a/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
@@ -75,7 +75,7 @@
       </div>
 
       <div class="refill__closed-error" *ngIf="!selectedMerchant">
-        {{'Sorry, refill is closed for current moment!' | translate}}
+        {{'Sorry, refill is closed for current moment' | translate}}!
       </div>
     </div>
   </form>
