--- a/src/app/funds/pending-request-info/pending-request-info.component.html
+++ b/src/app/funds/pending-request-info/pending-request-info.component.html
@@ -10,14 +10,14 @@
               <path
                 d="M3.82596 0.119541C3.60017 -0.0567689 3.25769 -0.0355965 3.06102 0.166823L0.137687 3.17624L0.133319 3.18071C-0.0387293 3.35787 -0.0421708 3.61517 0.110923 3.7948C0.119367 3.80467 0.128289 3.81436 0.137687 3.82376L3.06102 6.83318C3.25769 7.0356 3.60017 7.05677 3.82596 6.88046C4.05175 6.70415 4.07536 6.3971 3.87872 6.19459L1.73329 3.98602H8.45783C8.75727 3.98602 9 3.76841 9 3.49991C9 3.23141 8.75727 3.0138 8.45783 3.0138H1.73348L3.87872 0.805412C4.07536 0.602898 4.05175 0.295851 3.82596 0.119541Z"/>
             </svg>
-            Request info
+            {{'Request info' | translate}}
           </div>
         </div>
         <table class="table table--mob">
           <thead class="table__head">
           <tr class="table__head-row">
-            <th class="table__cell-head table__cell-head--tal">Id</th>
-            <th class="table__cell-head table__cell-head--tal">Status</th>
+            <th class="table__cell-head table__cell-head--tal">{{'Id' | translate}}</th>
+            <th class="table__cell-head table__cell-head--tal">{{'Status' | translate}}</th>
           </tr>
           </thead>
           <tbody class="table__body table__body--none-shadow">
@@ -26,21 +26,21 @@
               1998500374
             </td>
             <td class="table__cell table__cell--tal">
-              <span class="txt-red">Rejected</span>
+              <span class="txt-red">{{'Rejected' | translate}}</span>
             </td>
           </tr>
           </tbody>
         </table>
         <div class="request-status-info__text">
-          Your payment was declined because of the administrator's harmfulness.
+          {{"Your payment was declined because of the administrator's harmfulness" | translate}}.
           <br>
           <br>
-          If you want to punish him with brute force - act
+          {{'If you want to punish him with brute force - act' | translate}}
         </div>
         <div class="note request-status-info__note ">
           <ul class="note__list">
             <li class="note__list-item">
-              Once you have submitted your withdrawal request, we will send a confirmation email. Please then click on the confirmation link in your email.
+              {{'Once you have submitted your withdrawal request, we will send a confirmation email. Please then click on the confirmation link in your email' | translate}}.
             </li>
           </ul>
           <a href="#" class="link request-status-info__link">support@exrates.me</a>
