--- a/src/app/popups/identity-popup/webcam/webcam.component.html
+++ b/src/app/popups/identity-popup/webcam/webcam.component.html
@@ -9,7 +9,7 @@
 ></webcam>
 
 <div class="modal__row">
-  <button class="btn btn--active" (click)="onSubmit()">Submit</button>
+  <button class="btn btn--active" (click)="onSubmit()">{{'Submit' | translate}}</button>
 </div>
 
 <!--<button (click)="triggerSnapshot();">Take A Snapshot</button>-->
