--- a/src/app/popups/two-factor-popup/google/google-step-one/google-step-one.component.html
+++ b/src/app/popups/two-factor-popup/google/google-step-one/google-step-one.component.html
@@ -1,6 +1,6 @@
-<div class="title modal__title">Two-Factor authentication by Google Authenticator</div>
+<div class="title modal__title">{{'Two-Factor authentication by Google Authenticator' | translate}}</div>
 <div class="subtitle modal__subtitle">
-  <p>Download Google Authenticator on your mobile device</p>
+  <p>{{'Download Google Authenticator on your mobile device' | translate}}</p>
 </div>
 <div class="modal__store-row">
   <a class="modal__store-link"
@@ -16,4 +16,4 @@
     <img src="../../../../../assets/img/app-store-black-bg.svg">
   </a>
 </div>
-<button class="btn btn--active btn--center " (click)="onNextStep()">To the next step</button>
+<button class="btn btn--active btn--center " (click)="onNextStep()">{{'To the next step' | translate}}</button>
