--- a/src/app/referral/referral-structure/referral-structure.component.html
+++ b/src/app/referral/referral-structure/referral-structure.component.html
@@ -3,29 +3,29 @@
   <div class="referral referral--mob">
     <div class="referral__header-mob">
       <div class=" referral__page-title">
-        Referral structure
+        {{'Referral structure' | translate}}
       </div>
       <div class="referral__filter-btn">
         <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M15.9317 0.44323C15.8028 0.147863 15.5799 0.000159206 15.2618 0H0.737807C0.420134 0 0.196893 0.147863 0.0682816 0.44323C-0.0602502 0.753723 -0.00735105 1.01904 0.227217 1.23867L5.82145 6.84086V12.3635C5.82145 12.5607 5.89335 12.731 6.03702 12.8751L8.9417 15.784C9.07798 15.9278 9.24813 16 9.45245 16C9.54315 16 9.63766 15.9809 9.73602 15.9431C10.0312 15.8142 10.1788 15.5908 10.1788 15.2726V6.8409L15.7728 1.2387C16.0075 1.01908 16.0602 0.753842 15.9317 0.44323Z" />
         </svg>
-        Filters
+        {{'Filters' | translate}}
       </div>
     </div>
     <div class="referral__create-structure">
-      <h6 class="referral__structure-title">Create new structure</h6>
+      <h6 class="referral__structure-title">{{'Create new structure' | translate}}</h6>
       <div class="wrap-input referral__structure-input">
         <input class="wrap-input__input" name="currency" type="text" required>
-        <label class="wrap-input__label" for="">Structure name</label>
+        <label class="wrap-input__label" for="">{{'Structure name' | translate}}</label>
         <div class="wrap-input__line"></div>
       </div>
-      <button class="btn btn--center btn--auto btn--empty-blue">Create structure</button>
+      <button class="btn btn--center btn--auto btn--empty-blue">{{'Create structure' | translate}}</button>
     </div>
     <table class="table table--mob">
       <thead class="table__head">
       <tr class="table__head-row">
-        <th class="table__cell-head table__cell-head--tal">Name</th>
-        <th class="table__cell-head table__cell-head--tal">Referals</th>
+        <th class="table__cell-head table__cell-head--tal">{{'Name' | translate}}</th>
+        <th class="table__cell-head table__cell-head--tal">{{'Referals' | translate}}</th>
         <th class="table__cell-head"></th>
       </tr>
       </thead>
@@ -33,7 +33,7 @@
       <!-- t-row start-->
       <tr class="table__row--mob">
         <td class="table__cell table__cell--tal">
-          <span>My awesome structure</span>
+          <span>{{'My awesome structure' | translate}}</span>
         </td>
         <td class="table__cell table__cell--tal">
             <span class="referral__people-icon">
@@ -59,7 +59,7 @@
     </table>
     <div class="referral__steps-block" style="margin-top: 40px;">
       <div class="row" style="position: relative;">
-        <button class="btn btn--center btn--empty-blue referral__btn-toggler referral__btn-toggler--active">How it works?</button>
+        <button class="btn btn--center btn--empty-blue referral__btn-toggler referral__btn-toggler--active">{{'How it works?' | translate}}</button>
       </div>
       <div class="referral__steps-wrap">
         <div class="referral__step referral__step--card">
@@ -82,7 +82,7 @@
             </svg>
           </span>
           <div class="referral__step-title">
-            Invite people by referal link
+            {{'Invite people by referal link' | translate}}
           </div>
           <span class="referral__step-number">1</span>
         </div>
@@ -111,7 +111,7 @@
 
           </span>
           <div class="referral__step-title">
-            They start trade and pay comission
+            {{'They start trade and pay comission' | translate}}
           </div>
           <span class="referral__step-number">2</span>
         </div>
@@ -132,7 +132,7 @@
             </svg>
           </span>
           <div class="referral__step-title">
-            Recieve the charges fromtheir comission
+            {{'Recieve the charges fromtheir comission' | translate}}
           </div>
           <span class="referral__step-number">3</span>
         </div>
@@ -182,7 +182,7 @@
 
           </span>
           <div class="referral__step-title">
-            Build a structures and earn money
+            {{'Build a structures and earn money' | translate}}
           </div>
           <span class="referral__step-number">4</span>
         </div>
@@ -190,7 +190,7 @@
     </div>
     <div class="referral__steps-block">
       <div class="row" style="position: relative;">
-        <button class="btn btn--center btn--empty-blue referral__btn-toggler referral__btn-toggler--active">How much I will get?</button>
+        <button class="btn btn--center btn--empty-blue referral__btn-toggler referral__btn-toggler--active">{{'How much I will get\?' | translate}}</button>
       </div>
       <div class="referral__steps-wrap">
         <div class="referral__step">
