--- a/src/app/funds/balance/refill-money/refill-step-two/refill-crypto/refill-crypto.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-crypto/refill-crypto.component.html
@@ -93,6 +93,6 @@
   <div class="note__title">{{'Please note:' | translate}}</div>
   <ul class="note__list">
     <li class="note__list-item" [innerHTML]="'Coins will be deposited immediately after <b>2</b> network confirmations' | translate"></li>
-    <li class="note__list-item">{{'Send only' | translate}} <b>{{activeCrypto.name}}</b> {{'to this deposit address. Sending any other coin or token to this address may result in the loss of your deposit.' | translate}}</li>
+    <li class="note__list-item">{{'Send only' | translate}} <b>{{activeCrypto.name}}</b> {{'to this deposit address'}}.{{' Sending any other coin or token to this address may result in the loss of your deposit' | translate}}.</li>
   </ul>
 </div>
