--- a/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
@@ -1,4 +1,4 @@
-<div class="title send__title">Crypto Withdrawal<span>{{activeCrypto ? activeCrypto.name : ''}}</span></div>
+<div class="title send__title">{{'Crypto Withdrawal' | translate}}<span>{{activeCrypto ? activeCrypto.name : ''}}</span></div>
 <div class="formWraper" *ngIf="isEnterData">
   <form [formGroup]="form">
     <div class="send__inputs-wrap" *ngIf="activeCrypto">
@@ -7,7 +7,7 @@
           <img [src]="activeCrypto.name | getIconUrl" class="select__list-item-icon">
           {{activeCrypto.name}}
         </div>
-        <div class="select__label">Currency</div>
+        <div class="select__label">{{'Currency' | translate}}</div>
         <div class="select__line"></div>
         <div class="select__triangle"></div>
         <!--add select__list-searching--open for looking open state-->
@@ -43,7 +43,7 @@
       </div>
       <div class="wrap-input send__wrap-input"
            [ngClass]="{'wrap-input--error': isSubmited && (isAmountMax || isAmountMin || form.controls['amount'].value === '0')}">
-        <div class="avaliable">Avaliable: <a (click)="balanceClick()" class="link">{{activeBalance}}
+        <div class="avaliable">{{'Avaliable:' | translate}} <a (click)="balanceClick()" class="link">{{activeBalance}}
           {{activeCrypto.name}}</a></div>
         <app-price-input [placeholder]="'Amount'" (customInput)="amountInput($event)" name="amount"
                          formControlName="amount"></app-price-input>
@@ -53,10 +53,10 @@
         <!--Day limit for withdrawal is {{minWithdrawSum}} {{activeCrypto.name}}</span>-->
         <span class="wrap-input__message wrap-input__message--show"
               *ngIf="(isAmountMin || form.controls['amount'].value === '0') && isSubmited">
-      Minimum sum for withdrawal {{minWithdrawSum}} {{activeCrypto ? activeCrypto.name : ''}}</span>
+      {{'Minimum sum for withdrawal' | translate}} {{minWithdrawSum}} {{activeCrypto ? activeCrypto.name : ''}}</span>
         <span class="wrap-input__message wrap-input__message--show"
               *ngIf="isAmountMax && isSubmited">
-      Max sum for withdrawal {{activeBalance}}</span>
+      {{'Max sum for withdrawal' | translate}} {{activeBalance}}</span>
         <!--Input error section ends-->
       </div>
     </div>
@@ -64,12 +64,12 @@
       <div class="wrap-input  send__wrap-input"
            [ngClass]="{'wrap-input--error': !form.controls['address'].valid && isSubmited}">
         <input class="wrap-input__input" name="address" formControlName="address" required>
-        <label class="wrap-input__label">Address for withdraw money</label>
+        <label class="wrap-input__label">{{'Address for withdraw money' | translate}}</label>
         <div class="wrap-input__line"></div>
         <!--Input error section starts-->
         <span class="wrap-input__message wrap-input__message--show"
               *ngIf="!form.controls['address'].valid && isSubmited">
-      You should enter {{activeCrypto.name}} address for withdrawal</span>
+      {{'You should enter' | translate}} {{activeCrypto.name}} {{'address for withdrawal' | translate}}</span>
         <!--Input error section ends-->
       </div>
       <div class="wrap-input send__wrap-input"
@@ -77,12 +77,12 @@
            [ngClass]="{'wrap-input--error': !form.controls['memo'].valid && isSubmited}"
       >
         <input class="wrap-input__input" name="memo" formControlName="memo">
-        <label class="wrap-input__label">Memo ID</label>
+        <label class="wrap-input__label">{{'Memo ID' | translate}}</label>
         <div class="wrap-input__line"></div>
         <!--Input error section starts-->
         <span class="wrap-input__message wrap-input__message--show"
               *ngIf="!form.controls['memo'].valid && isSubmited"
-        >Enter memo ID</span>
+        >{{'Enter memo ID' | translate}}</span>
         <!--Input error section ends-->
       </div>
     </div>
@@ -90,29 +90,29 @@
   <div class="send__line"></div>
   <div class="send__info">
     <div class="send__info-row">
-      <div class="send__info-title">You want to withdraw:</div>
+      <div class="send__info-title">{{'You want to withdraw:' | translate}}</div>
       <div class="send__info-value">{{calculateData.amount}} {{activeCrypto ? activeCrypto.name : ''}}</div>
     </div>
     <div class="send__info-row">
-      <div class="send__info-title">Exchange comission:</div>
+      <div class="send__info-title">{{'Exchange comission:' | translate}}</div>
       <div class="send__info-value">{{calculateData.companyCommissionRate}} = {{calculateData.companyCommissionAmount}}
         {{activeCrypto ? activeCrypto.name : ''}}
       </div>
     </div>
     <div class="send__info-row">
-      <div class="send__info-title">Merchant comission:</div>
+      <div class="send__info-title">{{'Merchant comission:' | translate}}</div>
       <div class="send__info-value">{{calculateData.merchantCommissionRate}} =
         {{calculateData.merchantCommissionAmount}} {{activeCrypto ? activeCrypto.name : ''}}
       </div>
     </div>
     <div class="send__info-row">
-      <div class="send__info-title">Total comission:</div>
+      <div class="send__info-title">{{'Total comission:' | translate}}</div>
       <div class="send__info-value">{{calculateData.commission_rates_sum}}% = {{calculateData.totalCommissionAmount}}
         {{activeCrypto ? activeCrypto.name : ''}}
       </div>
     </div>
     <div class="send__info-row">
-      <div class="send__info-title">Total with comission:</div>
+      <div class="send__info-title">{{'Total with comission:' | translate}}</div>
       <div class="send__info-value">{{calculateData.resultAmount }} {{activeCrypto ? activeCrypto.name : ''}}</div>
     </div>
   </div>
@@ -122,29 +122,31 @@
         'btn--error': (!form.valid || isAmountMin || isAmountMax ) && isSubmited
         }"
           (click)="onSubmitWithdrawal()"
-  >Withdraw
+  >{{'Withdraw' | translate}}
     <span class="value">{{calculateData.resultAmount}}</span>
     <span> {{activeCrypto ? activeCrypto.name : ''}}</span>
   </button>
   <div class="send__line"></div>
   <div class="note modal__note">
-    <div class="note__title">Please note:</div>
+    <div class="note__title">{{'Please note:' | translate}}</div>
     <ul class="note__list">
-      <li class="note__list-item">Once you have submitted your withdrawal request, we will send a confirmation email.
-        Please then click on the confirmation link in your email.
+      <li class="note__list-item">{{'Once you have submitted your withdrawal request, we will send a confirmation email' | translate}}.
+        {{'Please then click on the confirmation link in your email' | translate}}.
       </li>
-      <li class="note__list-item">After making a withdrawal, you can track its progress in history on funds page.</li>
-      <li class="note__list-item">Do not withdraw directly to a crowdfund or ICO. We will not credit your account with
-        tokens from that sale.
+      <li class="note__list-item">
+        {{'After making a withdrawal, you can track its progress in history on funds page' | translate}}.
+      </li>
+      <li class="note__list-item">
+        {{'Do not withdraw directly to a crowdfund or ICO' | translate}}. {{'We will not credit your account with tokens from that sale' | translate}}.
       </li>
     </ul>
   </div>
 </div>
 
 <div *ngIf="!isEnterData" class="captcha-wrapper">
-  <h6 class="popup__subtitle">Enter the captcha</h6>
+  <h6 class="popup__subtitle">{{'Enter the captcha' | translate}}</h6>
   <re-captcha (resolved)="afterResolvedCaptcha($event)" [siteKey]="recaptchaKey"></re-captcha>
   <div class="popup__links-wrap  popup__links-wrap--center">
-    <a class="popup__link" (click)="goToWithdrawal()">Back to withdrawal form</a>
+    <a class="popup__link" (click)="goToWithdrawal()">{{'Back to withdrawal form' | translate}}</a>
   </div>
 </div>
