--- a/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
@@ -1,4 +1,4 @@
-<div class="title send__title">Fiat Withdrawal <span>{{activeFiat ? activeFiat.name : ''}}</span></div>
+<div class="title send__title">{{'Fiat Withdrawal' | translate}} <span>{{activeFiat ? activeFiat.name : ''}}</span></div>
 <div class="formWraper" *ngIf="isEnterData">
   <form [formGroup]="form">
     <div class="send__inputs-wrap">
@@ -7,7 +7,7 @@
           <img [src]="activeFiat ? activeFiat.name : 'no_icon' | getIconUrl" class="select__list-item-icon">
           {{activeFiat ? activeFiat.name : ''}}
         </div>
-        <div class="select__label">Currency</div>
+        <div class="select__label">{{'Currency' | translate}}</div>
         <div class="select__line"></div>
         <div class="select__triangle"></div>
         <!--add select__list--open for looking open state-->
@@ -24,7 +24,7 @@
       </div>
       <div class="wrap-input send__wrap-input"
            [ngClass]="{'wrap-input--error': isSubmited && (isAmountMax || isAmountMin || form.controls['amount'].value === '0')}">
-        <div class="avaliable">Avaliable: <a (click)="balanceClick()" class="link">{{activeBalance}} {{activeFiat ?
+        <div class="avaliable">{{'Avaliable:' | translate}} <a (click)="balanceClick()" class="link">{{activeBalance}} {{activeFiat ?
           activeFiat.name : ''}}</a></div>
         <!--<input class="wrap-input__input" required>-->
         <!--<label class="wrap-input__label"><span> </span>Amount</label>-->
@@ -34,10 +34,10 @@
         <!--Input error section starts-->
         <span class="wrap-input__message wrap-input__message--show"
               *ngIf="(isAmountMin || form.controls['amount'].value === '0') && isSubmited">
-      Minimum sum for withdrawal {{minWithdrawSum}} {{activeFiat ? activeFiat.name : ''}}</span>
+      {{'Minimum sum for withdrawal' | translate}} {{minWithdrawSum}} {{activeFiat ? activeFiat.name : ''}}</span>
         <span class="wrap-input__message wrap-input__message--show"
               *ngIf="isAmountMax && isSubmited">
-      Max sum for withdrawal {{activeBalance}}</span>
+      {{'Max sum for withdrawal' | translate}} {{activeBalance}}</span>
         <!--<span class="wrap-input__message wrap-input__message&#45;&#45;show">Day limit for withdrawal is 30 000 USD</span>-->
         <!--Input error section ends-->
       </div>
@@ -50,7 +50,7 @@
           <img [src]="selectedMerchant ? selectedMerchant.name : 'no_icon' | getIconUrl" class="select__list-item-icon">
           {{selectedMerchant ? selectedMerchant.name : ''}}
         </div>
-        <div class="select__label">Payment system</div>
+        <div class="select__label">{{'Payment system' | translate}}</div>
         <div class="select__line"></div>
         <div class="select__triangle"></div>
         <!--add select__list-searching--open for looking open state-->
@@ -82,13 +82,13 @@
       <div class="wrap-input send__wrap-input"
            [ngClass]="{'wrap-input--error': !form.controls['address'].valid && isSubmited}">
         <input class="wrap-input__input" name="address" formControlName="address" required>
-        <label class="wrap-input__label">Payment system <span>{{activeFiat ? activeFiat.name : ''}}</span>
-          address</label>
+        <label class="wrap-input__label">{{'Payment system' | translate}} <span>{{activeFiat ? activeFiat.name : ''}}</span>
+          {{'address' | translate}}</label>
         <div class="wrap-input__line"></div>
         <!--Input error section starts-->
         <span class="wrap-input__message wrap-input__message--show"
               *ngIf="!form.controls['address'].valid && isSubmited">
-      Set merchant adress for withdrawal</span>
+      {{'Set merchant adress for withdrawal' | translate}}</span>
         <!--Input error section ends-->
       </div>
     </div>
@@ -96,29 +96,29 @@
   <div class="send__line"></div>
   <div class="send__info">
     <div class="send__info-row">
-      <div class="send__info-title">You want to withdraw:</div>
+      <div class="send__info-title">{{'You want to withdraw:' | translate}}</div>
       <div class="send__info-value">{{calculateData.amount}} {{activeFiat ? activeFiat.name : ''}}</div>
     </div>
     <div class="send__info-row">
-      <div class="send__info-title">Exchange comission:</div>
+      <div class="send__info-title">{{'Exchange comission:' | translate}}</div>
       <div class="send__info-value">{{calculateData.companyCommissionRate}} = {{calculateData.companyCommissionAmount}}
         {{activeFiat ? activeFiat.name : ''}}
       </div>
     </div>
     <div class="send__info-row">
-      <div class="send__info-title">Merchant comission:</div>
+      <div class="send__info-title">{{'Merchant comission:' | translate}}</div>
       <div class="send__info-value">{{calculateData.merchantCommissionRate}} =
         {{calculateData.merchantCommissionAmount}} {{activeFiat ? activeFiat.name : ''}}
       </div>
     </div>
     <div class="send__info-row">
-      <div class="send__info-title">Total comission:</div>
+      <div class="send__info-title">{{'Total comission:' | translate}}</div>
       <div class="send__info-value">{{calculateData.commission_rates_sum}}% = {{calculateData.totalCommissionAmount}}
         {{activeFiat ? activeFiat.name : ''}}
       </div>
     </div>
     <div class="send__info-row">
-      <div class="send__info-title">Total with comission:</div>
+      <div class="send__info-title">{{'Total with comission:' | translate}}</div>
       <div class="send__info-value">{{calculateData.resultAmount}} {{activeFiat ? activeFiat.name : ''}}</div>
     </div>
   </div>
@@ -127,28 +127,30 @@
         'btn--empty-blue': !form.valid && !isSubmited ,
         'btn--error': !form.valid && isSubmited
         }"
-          (click)="onSubmitWithdrawal()">Withdraw
+          (click)="onSubmitWithdrawal()">{{'Withdraw' | translate}}
     <span class="value">{{calculateData.resultAmount}}</span>
     <span> {{activeFiat ? activeFiat.name : ''}}</span></button>
   <div class="send__line"></div>
   <div class="note modal__note">
-    <div class="note__title">Please note:</div>
+    <div class="note__title">{{'Please note:' | translate}}</div>
     <ul class="note__list">
-      <li class="note__list-item">Once you have submitted your withdrawal request, we will send a confirmation email.
-        Please then click on the confirmation link in your email.
+      <li class="note__list-item">{{'Once you have submitted your withdrawal request, we will send a confirmation email' | translate}}.
+        {{'Please then click on the confirmation link in your email' | translate}}.
       </li>
-      <li class="note__list-item">After making a withdrawal, you can track its progress in history on funds page.</li>
-      <li class="note__list-item">Do not withdraw directly to a crowdfund or ICO. We will not credit your account with
-        tokens from that sale.
+      <li class="note__list-item">
+        {{'After making a withdrawal, you can track its progress in history on funds page' | translate}}.
+      </li>
+      <li class="note__list-item">
+        {{'Do not withdraw directly to a crowdfund or ICO' | translate}}. {{'We will not credit your account with tokens from that sale' | translate}}.
       </li>
     </ul>
   </div>
 </div>
 
 <div *ngIf="!isEnterData" class="captcha-wrapper">
-  <h6 class="popup__title">Enter the captcha</h6>
+  <h6 class="popup__title">{{'Enter the captcha' | translate}}</h6>
   <re-captcha (resolved)="afterResolvedCaptcha($event)" [siteKey]="recaptchaKey"></re-captcha>
   <div class="popup__links-wrap  popup__links-wrap--center">
-    <a class="popup__link" (click)="goToWithdrawal()">Back to withdrawal form</a>
+    <a class="popup__link" (click)="goToWithdrawal()">{{'Back to withdrawal form' | translate}}</a>
   </div>
 </div>
