--- a/src/app/funds/balance/send-money/send-step-two/send-inner-transfer/send-inner-transfer.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-inner-transfer/send-inner-transfer.component.html
@@ -1,25 +1,29 @@
 
-<div class="title send__title">Make Inner transfer</div>
-<div class="send__row">
-  <button class="btn btn--empty-blue"
-  (click)="chooseTransfer('By email')"
-  >Instant transfer</button>
-  <div class="send__transfer-description">Send instant internal transfer to another account using their email or nickname.</div>
+<div class="title send__title">
+  {{'Make Inner transfer' | translate}}
 </div>
 <div class="send__row">
   <button class="btn btn--empty-blue"
-          (click)="chooseTransfer('By code')"
-  >Protected by code & mail</button>
-  <div class="send__transfer-description">Make <b>password-protected</b> personal transfer
-    to another user by his <b>email or nickname</b>
-    <div class="small">(user can get the money if he knows the transfer code)</div>
+  (click)="chooseTransfer('By email')"
+  >{{'Instant transfer' | translate}}</button>
+  <div class="send__transfer-description">
+    {{'Send instant internal transfer to another account using their email or nickname' | translate}}.
+  </div>
+</div>
+<div class="send__row">
+  <button class="btn btn--empty-blue"
+          (click)="chooseTransfer('By code')">
+    {{'Protected by code & mail' | translate}}
+  </button>
+  <div class="send__transfer-description" [innerHTML]="'Make <b>password-protected</b> personal transfer to another user by his <b>email or nickname</b>' | translate">
+    <div class="small">({{'user can get the money if he knows the transfer code' | translate}})</div>
   </div>
 </div>
 <div class="send__row">
   <button class="btn btn--empty-blue"
           (click)="chooseTransfer('By private code')"
-  >Protected by code only</button>
-  <div class="send__transfer-description">Make <b>password-protected</b> transfer
-    <div class="small">Anyone who knows the code may recive the transfer</div>
+  >{{'Protected by code only' | translate}}</button>
+  <div class="send__transfer-description" [innerHTML]="'Make <b>password-protected</b> transfer' | translate">
+    <div class="small">{{'Anyone who knows the code may recive the transfer' | translate}}</div>
   </div>
 </div>
