--- a/src/app/funds/pending-request-mob/pending-request-mob.component.html
+++ b/src/app/funds/pending-request-mob/pending-request-mob.component.html
@@ -2,7 +2,7 @@
 <ng-container>
   <div class="balance__request-mob">
     <div class="balance__request-mob-header">
-      <h6>Pending Requests</h6>
+      <h6>{{'Pending Requests' | translate}}</h6>
       <div *ngIf="loading$ | async">
         <app-loader size="small"></app-loader>
       </div>
@@ -26,9 +26,9 @@
       <table class="table table--mob">
         <thead class="table__head">
         <tr class="table__head-row">
-          <th class="table__cell-head table__cell-head--tal">Date / Type</th>
-          <th class="table__cell-head table__cell-head--tal">Currency</th>
-          <th class="table__cell-head table__cell-head--tar">Amount</th>
+          <th class="table__cell-head table__cell-head--tal">{{'Date / Type' | translate}}</th>
+          <th class="table__cell-head table__cell-head--tal">{{'Currency' | translate}}</th>
+          <th class="table__cell-head table__cell-head--tar">{{'Amount' | translate}}</th>
         </tr>
         </thead>
         <tbody class="table__body table__body--none-shadow">
@@ -77,7 +77,7 @@
           </ng-container>
           <tr class="table__row--mob" *ngIf="!pendingRequests.length">
             <td class="table__cell table__cell--taс" colspan="4">
-              No matching records found
+              {{'No matching records found' | translate}}
             </td>
           </tr>
         </tbody>
