--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -3,14 +3,14 @@
   <div class="orders orders--mob">
     <div class="orders__header-mob">
       <div class=" orders__page-title">
-        Open orders
+        {{'Open orders' | translate}}
       </div>
       <div class="orders__amount">{{countOfEntries$ | async}}</div>
       <div class="orders__filter-btn" (click)="openFilterPopup()">
         <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M15.9317 0.44323C15.8028 0.147863 15.5799 0.000159206 15.2618 0H0.737807C0.420134 0 0.196893 0.147863 0.0682816 0.44323C-0.0602502 0.753723 -0.00735105 1.01904 0.227217 1.23867L5.82145 6.84086V12.3635C5.82145 12.5607 5.89335 12.731 6.03702 12.8751L8.9417 15.784C9.07798 15.9278 9.24813 16 9.45245 16C9.54315 16 9.63766 15.9809 9.73602 15.9431C10.0312 15.8142 10.1788 15.5908 10.1788 15.2726V6.8409L15.7728 1.2387C16.0075 1.01908 16.0602 0.753842 15.9317 0.44323Z" />
         </svg>
-        Filters
+        {{'Filters' | translate}}
       </div>
     </div>
     <div
@@ -26,14 +26,14 @@
       <table class="table table--mob">
         <thead class="table__head">
           <tr class="table__head-row">
-            <th class="table__cell-head table__cell-head--tal">Market/Date
+            <th class="table__cell-head table__cell-head--tal">{{'Market/Date' | translate}}
               <svg class="table__cell-head-arr" style="margin: 0 0 0 4px;" width="6" height="8" viewBox="0 0 6 8" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path d="M5.86338 3.74894C6.06488 3.99981 6.04068 4.38035 5.80935 4.59887L3.37001 7.84701L3.36491 7.85187C3.16243 8.04303 2.86838 8.04686 2.66309 7.87675C2.6518 7.86737 2.64073 7.85746 2.62999 7.84701L0.190654 4.59887C-0.0406818 4.38035 -0.0648789 3.99981 0.136618 3.74894C0.338115 3.49806 0.689025 3.47182 0.92047 3.69031L2.44455 6.07412L2.44455 0.602408C2.44455 0.269701 2.69325 0 3.00011 0C3.30697 0 3.55566 0.269701 3.55566 0.602408L3.55566 6.07391L5.07953 3.69031C5.31097 3.47182 5.66188 3.49806 5.86338 3.74894Z" />
               </svg>
             </th>
-            <th class="table__cell-head table__cell-head--tal"> Amount</th>
-            <th class="table__cell-head table__cell-head--tar">Price</th>
+            <th class="table__cell-head table__cell-head--tal"> {{'Amount' | translate}}</th>
+            <th class="table__cell-head table__cell-head--tar">{{'Price' | translate}}</th>
           </tr>
         </thead>
         <tbody class="table__body table__body--none-shadow">
@@ -62,19 +62,19 @@
               <td class="table__details-cell" colspan="4">
 
                 <div class="table__details-item">
-                  <div class="table__details-item-title">Order id</div>
+                  <div class="table__details-item-title">{{'Order id' | translate}}</div>
                   <div class="table__details-item-value">{{item.id}}</div>
                 </div>
                 <div class="table__details-item">
-                  <div class="table__details-item-title">Total Price</div>
+                  <div class="table__details-item-title">{{'Total Price' | translate}}</div>
                   <div class="table__details-item-value">{{item.amountWithCommission}}</div>
                 </div>
                 <div class="table__details-item">
-                  <div class="table__details-item-title">Type</div>
+                  <div class="table__details-item-title">{{'Type' | translate}}</div>
                   <div class="table__details-item-value"><span class="txt-green">{{item.operationType}}</span></div>
                 </div>
                 <div class="table__details-item">
-                  <div class="table__details-item-title">Fee</div>
+                  <div class="table__details-item-title">{{'Fee' | translate}}</div>
                   <div class="table__details-item-value">{{item.commissionFixedAmount}} {{item.currencyPairName | splitCurrency: 2}}</div>
                 </div>
                 <div class="table__details-item">
@@ -83,12 +83,12 @@
                       class="btn btn--small btn--empty-red"
                       style="width: 100%; max-width: 58px;"
                       (click)="onShowCancelOrderConfirm(item.id)"
-                    >Cancel</button>
+                    >{{'Cancel' | translate}}</button>
                     <div class="revoke-request" *ngIf="showCancelOrderConfirm === item.id">
-                      <div class="revoke-request__title">Are you sure you want to cancel selected order?</div>
+                      <div class="revoke-request__title">{{'Are you sure you want to cancel selected order' | translate}}?</div>
                       <div class="revoke-request__button-wrap">
-                        <button class="btn btn--small" (click)="cancelOrder(item)">Yes</button>
-                        <button class="btn btn--small" (click)="onShowCancelOrderConfirm(null)">No</button>
+                        <button class="btn btn--small" (click)="cancelOrder(item)">{{'Yes'| translate}}</button>
+                        <button class="btn btn--small" (click)="onShowCancelOrderConfirm(null)">{{'No'| translate}}</button>
                       </div>
                       <div class="revoke-request__triangle"></div>
                     </div>
@@ -99,7 +99,7 @@
           </ng-container>
           <tr class="table__row--mob" *ngIf="!(orderItems$ | async).length">
             <td class="table__cell table__cell--tal" colspan="4">
-              No matching records found
+              {{'No matching records found'| translate}}
             </td>
           </tr>
           <!-- t-row end-->
@@ -112,7 +112,7 @@
     <div class="filters-popup" [ngClass]="{'show-filter-popup': showFilterPopup}">
       <div class="filters-popup__header">
         <div class=" filters-popup__title">
-          Order filters
+          {{'Order filters'| translate}}
         </div>
         <div class="filters-popup__close" (click)="closeFilterPopup()">
           <svg width="15" height="17" viewBox="0 0 15 17" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -135,7 +135,7 @@
         </div>
         <div class="row row&#45;&#45;jcsb">
           <div class="wrap-input filters-popup__datepicker">
-            <label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateFrom?.date}" >From</label>
+            <label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateFrom?.date}" >{{'From'| translate}}</label>
             <my-date-picker
               name="from"
               [options]="myDatePickerOptions"
@@ -147,7 +147,7 @@
             <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
           </div>
           <div class="wrap-input filters-popup__datepicker">
-            <label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateTo?.date}" >To</label>
+            <label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateTo?.date}" >{{'To'| translate}}</label>
 
             <my-date-picker
               class="input-el"
@@ -162,7 +162,7 @@
             <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
           </div>
         </div>
-        <button (click)="closeFilterPopup()" class="btn filters-popup__btn">See <!--<span>{{countOfEntries$ | async}}</span>--> results</button>
+        <button (click)="closeFilterPopup()" class="btn filters-popup__btn">{{'See'| translate}} <!--<span>{{countOfEntries$ | async}}</span>--> {{'results'| translate}}</button>
       </form>
     </div>
     <!--filter-popup end-->
@@ -173,7 +173,7 @@
   <div class="orders">
     <div class="page-title">
       <h1 class="page-title__text">
-        Open orders
+        {{'Open orders'| translate}}
       </h1>
       <div *ngIf="loading$ | async">
         <app-loader></app-loader>
@@ -242,15 +242,15 @@
     <table class="table">
       <thead>
         <tr>
-          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">Order id</th>
-          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">Created</th>
-          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">Market</th>
-          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">Type</th>
-          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">Amount</th>
+          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Order id'| translate}}</th>
+          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Created'| translate}}</th>
+          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Market'| translate}}</th>
+          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Type'| translate}}</th>
+          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Amount'| translate}}</th>
           <th class="table__cell-head table__cell-head--tal" style="width: 60px;"></th>
-          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">Price</th>
-          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">Comission</th>
-          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">Total</th>
+          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Price'| translate}}</th>
+          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Comission'| translate}}</th>
+          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Total'| translate}}</th>
           <th class="table__cell-head table__cell-head--tal" style="width: 80px;"></th>
         </tr>
       </thead>
@@ -278,7 +278,7 @@
             </span>
           </td>
           <td class="table__cell">
-            <span class="orders__for">for</span>
+            <span class="orders__for">{{'for'| translate}}</span>
           </td>
           <td class="table__cell">
             <span>
@@ -300,13 +300,14 @@
           <td class="table__cell">
             <button class="btn btn&#45;&#45;small btn&#45;&#45;empty-red table__row-btn"
               style="width: 100%; max-width: 58px;"
-              (click)="onShowCancelOrderConfirm(item.id)"
-            >Cancel</button>
+              (click)="onShowCancelOrderConfirm(item.id)">
+              {{'Cancel' | translate}}
+            </button>
             <div class="revoke-request" *ngIf="showCancelOrderConfirm === item.id">
-              <div class="revoke-request__title">Are you sure you want to cancel selected order?</div>
+              <div class="revoke-request__title">{{'Are you sure you want to cancel selected order'| translate}}?</div>
               <div class="revoke-request__button-wrap">
-                <button class="btn btn&#45;&#45;small" (click)="cancelOrder(item)">Yes</button>
-                <button class="btn btn&#45;&#45;small" (click)="onShowCancelOrderConfirm(null)">No</button>
+                <button class="btn btn&#45;&#45;small" (click)="cancelOrder(item)">{{'Yes'| translate}}</button>
+                <button class="btn btn&#45;&#45;small" (click)="onShowCancelOrderConfirm(null)">{{'No'| translate}}</button>
               </div>
               <div class="revoke-request__triangle"></div>
             </div>
@@ -314,7 +315,7 @@
         </tr>
         <tr class="table__row" *ngIf="!(orderItems$ | async).length && !(loading$ | async)">
           <td class="table__cell table__cell--tac" colspan="10">
-            No matching records found
+            {{'No matching records found' | translate}}
           </td>
         </tr>
       </tbody>
