--- a/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
@@ -77,7 +77,7 @@
       </div>
 
       <div class="refill__closed-error" *ngIf="!selectedMerchant">
-        - Sorry, refill is closed for current moment!
+         Sorry, refill is closed for current moment!
       </div>
     </div>
   </form>
